# strichliste-rs

./: .envrc  .gitignore  Cargo.toml  README.md  config_example.yaml  flake.nix  module.nix  pkg.nix  pkg_crane.nix
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6k15fgwfsidpi19555s34ff5zadpbh0v-source  dk6hvd0nllbjxngmcp4ncgb13clq7m5d-source
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  meta.yml
.github/PULL_REQUEST_TEMPLATE/: bug.md  feature.md  meta.md
.github/workflows/: build.yaml  check.yaml
.sqlx/: query-027659b92d8fe5f0aafd72b8f8a6dededb403e88555fb1c9724d6d8eaea33ec1.json  query-0b14c40116d2da69bfcfb1e34f05cc35066cde620e17c6dda39e2cb90c962394.json  query-12253245d2e59c249511cf299511937acd342faaa46d90735dda3dbf10f50029.json  query-1416ded0f0d6e0dcd355a0f7e208f3c2e1445b596e73152e927698ba3d39bb49.json  query-1ba4d9e78b853855d23ba82356cc14ef609e9a34d538a1b34078944abfed9a26.json  query-2210c07eff8cfddb8a1f93ae1806c9a4a82d364ebd45e1fd106f9c91a30fac22.json  query-256fdd43eda2192ec2fd9e1d6ad2c2ac8d0a38ffe6a99a8732492420ee4c749f.json  query-25971431945f64d9aa526907f98005db40ebdaafd814c797a02dd541f9550add.json  query-2c4a3e690d081efd73a4e7f524bbd83063d86077c2d95fa935de9d4b75a2fb17.json  query-2d466d0202fdab79e055eb9f3f679d144247fb553dabe0f2e9cbb201553dc657.json  query-3425b09427ac95c61a47c012568d3704b98a9fd72373ba2a5b6ed27ab31aa068.json  query-37a6b9ad7cdb0903b568e55844f06462f67f3dafd0a1ebb4336caac3e32506d5.json  query-395084dceab2500cddd2c8a4a3a2742b89a60180adcd01c935d2cdd9cb2c87a6.json  query-3f4b169fc4086c5335aa3caee05b2ca5b6e8024c7742c3b9e754b2602e3ee0a1.json  query-464e900973085ee643627769efac12a5caf9d7090babbbe4a081194a026c73f5.json  query-4ecf0f0e074f8c4766c9a0118f43fbee3463be3f62b39f5e7f244bfcef6f7421.json  query-576784289195b1edcb0d8dc08d33858c660b13b7730c71d7a3ed36b162dd9ba6.json  query-58f0113e67ecd50859c5e4badaf329744b235fa569e000205ae82e29b332e192.json  query-5cf567cf1e177604d045d4fce222c3b124b405aca7308f78b08d5dd5b6d09947.json  query-60a834a3845009933e842031531b2d78d2b76211e0c9402f97e121e887268296.json  query-6ab62c0377cd55db46b3db6a12a7521708edcaa4105e9e9fa8a0b770ccd62f81.json  query-6ac8654e0e8febfd64ce87a9652eda49800d6dbd280c04732cc2464270ae6de2.json  query-6b3bf6168977733f8e81df6f4a026730315f591a0b930084df128d1d47adee50.json  query-712c1f9342e80127a907bc522514027f318120f0a45e3fd77906c547127dbee7.json  query-72faa0ce4e3a9760b6990ebf708ff0f39e9f47d4374d266a92f863d9b12d758e.json  query-788f71b4acfb410b1143df5ce00fae60c10d4770222feeea6af38c29ba957977.json  query-7ef4785c0da94a0fdf0ae95543ddaf0484f47e5c9fa66bb5d3f83d710399927b.json  query-801f43c5c964b9cf90fcb49bd31b7a78f60c3d9c380751cd2479d9d6212d1dd3.json  query-80d90b330a9b8d7e946a7a1452b0c002ab3d4581dc94e31ecf64a29c23d31bab.json  query-815e30f10346d04b2e06bf8b7b5aa121263d9c2ebe4381e5313c977bcc5f8d01.json  query-8212f3f7d4b70cf7e96dca4296787541f6e76a20406ad009863b3c2ec4c116fd.json  query-823f55efb35e280903f83b8a1c6be522112e477e99e5a2b7849eccc2110f7d06.json  query-87e58b33f1d2197ec6391b362c443bae2e4d0a618482b021df87d6c30f10e445.json  query-96a038f7c4a0defd7b41e0e41c2d71b14bc42250a21e04c084ab1654a4569f5c.json  query-9a1c7d0689d77eb8d607d6810556fee837c5ef597422b12f4fd2b2509563568f.json  query-9bafc73adb867ebf2fc4f87ea57b793d47522e2b7ead788901bfc6534b4b6c8e.json  query-9e9c2a1692c9ce45fc0ffb60108bc4b625cc203960fe012c31130d48e791c7d2.json  query-add9e91a216fd6e4ce1bc0bb535c57f19f90eae8389f0be47cf8fb20d4a2f46d.json  query-b5edd14dba7be6fb5e226980d69bda5ab06eb56b4919e6ddc51147b2cccca229.json  query-b86a5b79db19d780906d130452d91f13f678742a4494773992e5c736d9325bff.json  (+16 more)
diagramm/: main.puml  transaction_migration.puml
locales/de/: home.ftl  user.ftl
locales/en/: home.ftl  user.ftl
migrations/: 20250514141539_v0.1.up.sql  20251021125953_v0.2.up.sql
nix/: module.nix  pkg.nix
scripts/: compare-trees.py  diff-file-structure.sh  extract-dirs-from-readme.sh  fake-users.py  migration.py  prepare-sqlx  show-directories.sh
src/: app.rs  lib.rs  main.rs
src/backend/: mod.rs  settings.rs  state.rs
src/convert/: create_transaction_error_from_server_fn_error.rs  get_user_preferences_error_from_db_error.rs  get_user_preferences_error_from_server_fn_error.rs  group_id_from_i64.rs  mod.rs  money_from_i64.rs  money_from_u64.rs  money_try_from_string.rs  (+5 more)
(+285 files in other folders)
